Mon Aug 3 2015 Garen Torikian <gjtorikian@gmail.com>

	* Added UnicodeBlocks support to the scanner.

Sat Apr 18 14:38:12 2015 Ammar Ali <ammarabuali@gmail.com>

	* Updated ruby versions for latest releases.

Wed Dec 3 05:21:27 2014 Ammar Ali <ammarabuali@gmail.com>

	* Added expand_members method to CharacterSet, returns traditional
	  or unicode property forms of shothands (\d, \W, \s, etc.)

Tue Dec 2 02:42:39 2014 Ammar Ali <ammarabuali@gmail.com>

	* Improved meaning and output of %t and %T in strfregexp.

	* Added syntax versions for ruby 2.1.4 and 2.1.5 and updated
		latest 2.1 version.

Mon Dec 1 15:52:31 2014 Ammar Ali <ammarabuali@gmail.com>

	* Added to_h methods to Expression, Subexpression, and Quantifier.

Tue Oct 21 19:14:03 2014 Ammar Ali <ammarabuali@gmail.com>

	* Added traversal methods; traverse, each_expression, and map.

	* Added token/type test methods; type?, is?, and one_of?

	* Added printing method strfregexp, inspired by strftime.

Mon Oct 20 01:03:46 2014 Ammar Ali <ammarabuali@gmail.com>

	* Added scanning and parsing of free spacing (x mode) expressions.

	* Improved handling of inline options (?mixdau:...)

Fri Oct 18 14:09:38 2014 Ammar Ali <ammarabuali@gmail.com>

	* Added conditional expressions. Ruby 2.0.

	* Added keep (\K) markers. Ruby 2.0.

	* Added d, a, and u options. Ruby 2.0.

	* Added missing meta sequences to the parser. They were supported
	  by the scanner only.

	* Renamed Lexer's method to lex, added an alias to the old name (scan)

	* Use #map instead of #each to run the block in Lexer.lex.

	* Replaced VERSION.yml file with a constant.

	* Updated README

Fri Oct 10 11:49:38 2014 Ammar Ali <ammarabuali@gmail.com>

	* Update tokens and scanner with new additions in Unicode 7.0.

Mon Oct 6 04:30:24 2014 Ammar Ali <ammarabuali@gmail.com>

	* Released version 0.1.6

Sun Oct 5 19:58:17 2014 Ammar Ali <ammarabuali@gmail.com>

	* Fixed test and gem building rake tasks and extracted the gem