@@ -103,6 +103,7 @@ module Regexp::Expression
     class Age     < UnicodeProperty::Base; end
     class Derived < UnicodeProperty::Base; end
     class Script  < UnicodeProperty::Base; end
+    class Block   < UnicodeProperty::Base; end
   end
 
 end # module Regexp::Expression
