@@ -1,3 +1,7 @@
+Sun Aug 6 2015 Ammar Ali <ammarabuali@gmail.com>
+
+	* Added UnicodeBlocks support to the parser.
+
 Mon Aug 3 2015 Garen Torikian <gjtorikian@gmail.com>
 
 	* Added UnicodeBlocks support to the scanner.
